--- a/files/Jupyter_notebook/overrides.css
+++ b/files/Jupyter_notebook/overrides.css
@@ -6,7 +6,7 @@ div.output_area {
 div#maintoolbar {
     position: relative;
     width: 100%;
-    background: #333;
+    background: #fff;
    }
 #maintoolbar {
     margin-bottom: -3px;
